--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "webpack-merge": "^0.3.2"
   },
   "dependencies": {
+    "array.prototype.findindex": "^1.0.0",
+    "node-uuid": "^1.4.7",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   }
