--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-merge": "^0.3.2"
   },
   "dependencies": {
+    "alt": "^0.17.9",
     "array.prototype.findindex": "^1.0.0",
     "node-uuid": "^1.4.7",
     "react": "^0.14.3",
