--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "array.prototype.findindex": "^1.0.0",
     "node-uuid": "^1.4.7",
     "react": "^0.14.3",
+    "react-dnd": "^2.0.2",
+    "react-dnd-html5-backend": "^2.0.0",
     "react-dom": "^0.14.3"
   }
 }
