--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack",
+    "stats": "webpack --profile --json > stats.json",
+    "deploy": "node ./lib/deploy.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +16,9 @@
     "babel-core": "^5.8.34",
     "babel-loader": "^5.4.0",
     "babel-plugin-react-transform": "^1.1.1",
+    "clean-webpack-plugin": "^0.1.4",
     "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^0.9.1",
     "html-webpack-plugin": "^1.7.0",
     "react-transform-hmr": "^1.0.1",
     "style-loader": "^0.13.0",
